Fixed desktop styling. Changed font style for legibility.

--- a/src/components/envelope.css
+++ b/src/components/envelope.css
@@ -15,7 +15,7 @@
   justify-content: center;
   position: relative;
   height: 72%;
-  width: 68%;
+  width: 41%;
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
   top: 0;
