--- a/src/components/letter.css
+++ b/src/components/letter.css
@@ -35,7 +35,8 @@
   width: 100%;
   height: 14%;
   font-size: 15px;
-  font-family: "Rock Salt", Helvetica, sans-serif;
+  font-weight: 600;
+  font-family: "Anonymous Pro", Helvetica, sans-serif;
   color: var(--magenta-color);
   text-align: center;
 }
